--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             border-radius: 1rem; /* Rounded corners */
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
         }
-        input[type="text"], input[type="number"], textarea, input[type="date"] { /* Added input[type="date"] here */
+        input[type="text"], input[type="number"], textarea, input[type="date"] {
             width: 100%;
             padding: 0.75rem;
             margin-top: 0.25rem;
             border: 1px solid #cbd5e1;
-            border-radius: 0.5rem; /* Rounded corners */
+            border-radius: 0.5rem;
             font-size: 1rem;
             transition: all 0.2s ease-in-out;
         }
-        input[type="text"]:focus, input[type="number"]:focus, textarea:focus, input[type="date"]:focus { /* Added input[type="date"] here */
+        input[type="text"]:focus, input[type="number"]:focus, textarea:focus, input[type="date"]:focus {
             outline: none;
             border-color: #3b82f6;
             box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.3);
@@ -323,7 +323,6 @@
                     </tr>
                     <tr>
                         <td><input type="text" class="expense-category" name="expenseCategory[]" value="Travel"></td>
-                        <td><input type="text" class="expense-description" name="expenseDescription[]" value="State Leadership Summit (3 students)"></td>
                         <td><input type="number" class="expense-quantity" name="expenseQuantity[]" value="3" min="1"></td>
                         <td><input type="number" class="expense-unit-cost" name="expenseUnitCost[]" value="80" min="0"></td>
                         <td class="expense-total">$240.00</td>
